Setting up game foundation

--- a/src/casino.html
+++ b/src/casino.html
@@ -1,1 +1,12 @@
-<!-- casino.html -->
+<html>
+  <head>
+    <title> Casino Simulator! </title>
+
+  </head>
+
+  <body>
+    <canvas id="display" width=500 height=500>
+    </canvas>
+    <br>
+  </body>
+</html>
