--- a/src/casino.html
+++ b/src/casino.html
@@ -5,8 +5,14 @@
   </head>
 
   <body>
-    <canvas id="display" width=500 height=500>
-    </canvas>
+
+    <code>
+      Staff List    Player List    Game List<br>
+      ----------    -----------   ---------<br>
+    </code>
     <br>
+    <canvas id="display" width=400 height=400>
+    </canvas>
+
   </body>
 </html>
