testing object vars

--- a/src/casino.html
+++ b/src/casino.html
@@ -7,9 +7,15 @@
   <body>
 
     <code>
-      Staff List    Player List    Game List<br>
-      ----------    -----------   ---------<br>
+      <div id="test">
+        Staff List    Player List    Game List<br>
+        ----------    -----------   ---------<br>
+      </div>
     </code>
+
+    <br><br>
+    <button onclick="test()">Test!</button>
+
     <br>
     <canvas id="display" width=400 height=400>
     </canvas>
