--- a/src/casino.html
+++ b/src/casino.html
@@ -6,19 +6,16 @@
 
   <body>
 
+    <button onclick="test()">Test!</button><br>
+
     <code>
       <div id="test">
-        Staff List    Player List    Game List<br>
-        ----------    -----------   ---------<br>
+        Staff List    Guest List    Game List<br>
+        ----------    ----------   ---------<br>
       </div>
     </code>
 
-    <br><br>
-    <button onclick="test()">Test!</button>
-
-    <br>
-    <canvas id="display" width=400 height=400>
-    </canvas>
+    <!-- <canvas id="display" width=400 height=400></canvas> -->
 
   </body>
 </html>
