--- a/src/casino.html
+++ b/src/casino.html
@@ -6,7 +6,14 @@
 
   <body>
 
-    <button onclick="test()">Test!</button><br>
+    <button onclick="test()">Test!</button>
+    <button onclick="hireStaff()">Hire!</button>
+
+    <div id='hireNewStaff' style='display:none;'>
+      <button>Pit Boss</button>
+      <button>Dealer</button>
+      <button>Security Guard</button>
+    </div>
 
     <code>
       <div id="test">
