testing button creation in html5 canvas

--- a/src/casino.html
+++ b/src/casino.html
@@ -22,7 +22,8 @@
       </div>
     </code>
 
-    <!-- <canvas id="display" width=400 height=400></canvas> -->
+    <canvas id="display" width="600" height="400" style="border:1px solid #d3d3d3;"></canvas>
+    <button onclick="drawUI()">Draw UI</button>
 
   </body>
 </html>
