--- a/src/casino.html
+++ b/src/casino.html
@@ -10,9 +10,11 @@
     <button onclick="hireStaff()">Hire!</button>
 
     <div id='hireNewStaff' style='display:none;'>
-      <button>Pit Boss</button>
-      <button>Dealer</button>
-      <button>Security Guard</button>
+      Select job: <select>
+        <option value='dealer'>Dealer</option>
+        <option value='pitboss'>Pit Boss</option>
+        <option value='securityguard'>Security Guard</option>
+      </select>
     </div>
 
     <code>
@@ -22,8 +24,9 @@
       </div>
     </code>
 
+    <!--
     <canvas id="display" width="600" height="400" style="border:1px solid #d3d3d3;"></canvas>
-    <button onclick="drawUI()">Draw UI</button>
+    <button onclick="drawUI()">Draw UI</button>-->
 
   </body>
 </html>
